added last names | done with everyone

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -144,7 +144,7 @@
 
         <!-- Add your last names -->
         <footer>
-            By: Rowan Lajoie, Maxim, Daniel 
+            By: Rowan Lajoie, Maxim Rotaru, Daniel Levitin
         </footer>
     </div>
 
