justgage works in 'static' directory
now just have to extrapolate to other gauges

--- a/templates/dashboardMQTT.html
+++ b/templates/dashboardMQTT.html
@@ -27,12 +27,13 @@
             <img id="light-image" src="/static/images/dark.png" alt="Light Status" class="dark">
 
 
+            <!-- TODO: REMOVE IN LATER BUILD -->
             <div class="data-display">Temperature: <span id="temp-value">{{ temperature }}°C</span></div>
             
             <!-- Temperature gauge -->
-            <div id="tgauge" class="200x160px"></div>
+            <div id="temperature-gauge" class="200x160px"></div>
 
-
+            <!-- TODO: REPLACE WITH GAUGE IN LATER BUILD -->
             <div class="data-display">Humidity: <span id="humidity-value">{{ humidity }}%</span></div>
             <img id="humidity-icon" src="/static/images/humidity-mid.webp" alt="Humidity Level" class="mid">
 
