added humidity gauge | NOT TESTED YET

--- a/templates/dashboardMQTT.html
+++ b/templates/dashboardMQTT.html
@@ -33,8 +33,11 @@
             <!-- Temperature gauge -->
             <div id="temperature-gauge" class="200x160px"></div>
 
-            <!-- TODO: REPLACE WITH GAUGE IN LATER BUILD -->
+             <!-- TODO: REMOVE IN LATER BUILD -->
             <div class="data-display">Humidity: <span id="humidity-value">{{ humidity }}%</span></div>
+             <!-- Humidity gauge -->
+            <div id="humidty-gauge" class="200x160px"></div>
+            <!-- TODO: REPLACE WITH GAUGE IN LATER BUILD -->
             <img id="humidity-icon" src="/static/images/humidity-mid.webp" alt="Humidity Level" class="mid">
 
 
