data presentation for luminosity

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,10 +26,10 @@
         <div class="data-container">
             <img id="light-image" src="/static/images/dark.png" alt="Light Status" class="dark">
             
-            <!-- Temperature gauge -->
+            <!-- All Gauges -->
             <div id="temperature-gauge" class="gauge"></div>
-             <!-- Humidity gauge -->
             <div id="humidity-gauge" class="gauge"></div>
+            <div id="luminosity-gauge" class="gauge"></div>
 
 
             <p id="fan-status">Fan Status: {{ fan_status }}</p>
